--- a/dndsite/dndsite/templates/base.html
+++ b/dndsite/dndsite/templates/base.html
@@ -3,6 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Roomie Bill Tracking</title>
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <style>
